--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -34,7 +35,6 @@
         <activity android:name=".MapsActivity_main" />
         <activity android:name=".currentLocationNews" />
         <activity android:name=".News_Display" />
-        <activity android:name=".Location"></activity>
     </application>
 
 </manifest>
